adapt to squid god

--- a/src/views/Stake/migrate.scss
+++ b/src/views/Stake/migrate.scss
@@ -6,7 +6,7 @@
   .MuiBackdrop-root {
     backdrop-filter: blur(30px);
     -webkit-backdrop-filter: blur(30px);
-    .ohm-card {
+    .sgod-card {
       opacity: 1 !important;
       padding: 1.5em !important;
       padding-top: 1em !important;
@@ -63,7 +63,7 @@
         .stake-action-row {
           width: 100%;
           justify-content: center;
-          .input-group.ohm-input-group,
+          .input-group.sgod-input-group,
           .stake-button {
             height: 50px;
             min-width: 40%;
