--- a/src/style.scss
+++ b/src/style.scss
@@ -38,7 +38,7 @@ body {
   border-right: 0 !important;
 }
 
-.ohm-card {
+.sgod-card {
   max-width: 833px;
   .card-header {
     width: 100%;
@@ -71,7 +71,7 @@ body {
   }
 }
 
-.ohm-pairs {
+.sgod-pairs {
   display: flex;
   align-items: center;
 }
